# jig

./: .gitignore  LICENSE  README.md  dune-project  jig.opam
.github/workflows/: ci.yml  release.yml
docs/: implementing-a-port.md  writing-a-skill.md  writing-a-workflow.md
docs/research/: harness-model-flags.md  tier-audit.md
lib/: attach.ml  boxes.ml  config.ml  current.ml  dune  executor.ml  field_guide.ml  file.ml  handoff.ml  init.ml  items.ml  metering.ml  model_provider.ml  progress.ml  project.ml  run.ml  runner.ml  sanitize.ml  skill.ml  store.ml  subprocess.ml  tail.ml  validate.ml  workflow.ml  workspace.ml
skills/jig/: SKILL.md
skills/jig/references/: authoring.md  scaffolding.md
template/: config.yaml
template/.jig/: config.yaml
template/.jig/skills/implement-fix/: SKILL.md
template/.jig/skills/run-tests/: SKILL.md
template/.jig/workflows/: bugfix.yaml
template/skills/capture-evidence/: SKILL.md
template/skills/clarify-requirements/: SKILL.md
template/skills/implement-feature/: SKILL.md
template/skills/implement-fix/: SKILL.md
template/skills/open-pr/: SKILL.md
template/skills/reproduce-issue/: SKILL.md
template/skills/run-tests/: SKILL.md
template/skills/write-failing-test/: SKILL.md
template/workflows/: bugfix.yaml  feature-development.yaml
test/: dune  test_jig.ml
